examples/failing/test.cz
# Testing

# Simple assert
assert(1 + 1 == 2, "math doesn't work");

# TAP-producting test suites
let x = fn (a) {
    return a;
};

tap("test suite", fn(t) {
    t(1 + 1 == 2, "one plus one is two");
});

tap("second suite", fn(t) {
    t("x(2) == 2", "example using a string");
    t(x(3) == 2, "three does not equal two");
    t("a" + "b" == "ab", "a + b == ab");
});
